--- a/assets/css/login_styles.css
+++ b/assets/css/login_styles.css
@@ -21,22 +21,11 @@ header {
   text-shadow: 2px 2px 4px #000000;
 }
 
-header button {
-  cursor: pointer;
-  display: flex;
-  justify-content: right;
-  margin-left: 90%;
-}
-
 .endSession {
-  background-color: #000000;
+  background-color: slategray;
   color: #fff;
-  font-size: 13px;
 }
 
-.endSession:hover {
-  background-color: #fff;
-}
 .container {
   max-width: 400px;
   margin: auto;
@@ -73,6 +62,10 @@ header button {
   color: #000000;
 }
 
+#spacer {
+  height: 5vh;
+}
+
 p {
   color: #fff;
 }
@@ -83,4 +76,5 @@ footer {
   color: #fff;
   padding: 20px 0;
   text-align: center;
+  font-size: 12px;
 }
