--- a/assets/css/sendmoney_styles.css
+++ b/assets/css/sendmoney_styles.css
@@ -1,18 +1,21 @@
-
 /* Estilos generales */
 body {
-  display:flex;
+  padding: 20px;
+  background-color: darkslateblue;
+  display: flex;
   flex-direction: column;
-  min-height: 100vh; 
-  font-family: 'Montserrat', sans-serif;
+  min-height: 100vh;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
-  padding: 0;
+}
+
+.display-1 {
+  font-size: 50px;
 }
 
 /* Estilos del encabezado */
 header {
   color: #fff;
-  background-color:darkslateblue;
   padding: 20px;
   text-align: center;
   text-shadow: 2px 2px 4px #000000;
@@ -21,84 +24,78 @@ header {
 header h1 {
   font-size: 50px;
 }
-
- header button {
-  background-color:darkslateblue; 
-  color:#fff;            
-  padding: 3px;     
-  border-style: solid;
-  border-radius: 0px;                
-  cursor: pointer;         
-  font-size: 12px;   
- }
-.endSession {
-  display: flex;
-  justify-content:right;
-  margin-left: 80%;
+h3 {
+  background-color: rgb(203, 197, 245);
 }
-
-
 
 /* Estilos del contenido principal */
-main {
-  padding-left: 15px;
-  padding-right:15px;
-  flex:1;
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: auto;
+  border-radius: 10px;
 }
 
-h4 {
-  margin-top: 5px;
+table td {
+  font-size: 14px;
 }
 
-h3 {
-  background-color: #8c85b7;
-  text-align: center;
-  padding-left: 0;
-  padding:20px;
+#enviar button {
+  background-color: darkslateblue;
+  color: #fff;
 }
 
-#deposit a {
-  text-decoration: none;
+#enviar button:hover {
+  background-color: #000000;
+  color: #fff;
 }
 
-#deposit div {
-  padding-bottom: 20px;
+#btn-contacto {
+  display: flex;
+  justify-content: flex-end;
 }
 
-#deposit button {
-  margin-bottom: 20px;
+#btn-contacto button {
+  background-color: lightsteelblue;
+  border: none;
+  color: #000000;
 }
 
-
-/* Estilos responsivos */
-@media (max-width: 768px) {
-header {
-padding: 10px;
+#btn-contacto button:hover {
+  background-color: darkslateblue;
+  border: none;
+  color: #fff;
 }
 
-
-main {
-padding: 10px;
+#btn-modal button {
+  background-color: darkslateblue;
+  color: #fff;
 }
+
+#btn-modal button:hover {
+  background-color: #000000;
+  color: #fff;
+}
+
+#endSession button {
+  background-color: #000000;
+  color: #fff;
+}
+
+#endSession button:hover {
+  background-color: #fff;
+  color: #000000;
+}
+
+#spacer {
+  height: 10vh;
 }
 
 /* Estilo para el footer */
 footer {
-  background-color:darkslateblue;
-  color:#fff;
-  padding: 20px 0; 
+  background-color: darkslateblue;
+  color: #fff;
+  padding: 20px 0;
   text-align: center;
-}
-
-/* Estilo para botones */
-button {
-  background-color:#000000; 
-  color:#fff;            
-  padding: 10px 20px;      
-  border: none;            
-  border-radius: 10px;      
-  cursor: pointer;         
-  font-size: 14px;     
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;   
 }
