--- a/assets/css/login_styles.css
+++ b/assets/css/login_styles.css
@@ -62,6 +62,16 @@ header {
   color: #000000;
 }
 
+#btn-modal button {
+  background-color: darkslateblue;
+  color: #fff;
+}
+
+#btn-modal button:hover {
+  background-color: #000000;
+  color: #fff;
+}
+
 #spacer {
   height: 5vh;
 }
