--- a/assets/css/transaction_styles.css
+++ b/assets/css/transaction_styles.css
@@ -36,6 +36,9 @@ h3 {
   margin: auto;
   border-radius: 10px;
 }
+table td {
+  font-size: 13px;
+}
 
 #endSession button {
   background-color: #000000;
@@ -57,4 +60,5 @@ footer {
   color: #fff;
   padding: 20px 0;
   text-align: center;
+  font-size: 12px;
 }
