--- a/assets/css/index_stylesv2.css
+++ b/assets/css/index_stylesv2.css
@@ -56,15 +56,27 @@ footer {
   padding: 20px 0;
   text-align: center;
   min-height: 50px;
+  font-size: 12px;
 }
 
-/* Estilos responsivos */
-@media (max-width: 768px) {
-  header {
-    padding: 10px;
-  }
+.masked-text {
+  font-size: 6rem;
+  font-weight: bold;
+  color: transparent;
+  background-image: url("https://images.unsplash.com/photo-1732535725600-f805d8b33c9c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: 200%; /* Enlarged for smooth animation */
+  background-position: 0 50%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate-background 5s infinite alternate linear;
+}
 
-  main {
-    padding: 50px;
+@keyframes animate-background {
+  0% {
+    background-position: 0 50%;
+  }
+  100% {
+    background-position: 100% 50%;
   }
 }
